syntax = "proto3";

option java_package = "group3.p3network";
option java_multiple_files = true;
option java_outer_classname = "VideoProto";
option objc_class_prefix = "VP";


service SendingVideoService {
  rpc ListVideo(Command) returns (stream VideoInfo);
  rpc SendVideo(VideoInfo) returns (stream VideoData);
}

message Command {
  string command = 1;
}

message VideoInfo {
  string filename = 1;
  int64 filesize = 2;
}

message VideoData {
  string filename = 1;
  bytes data = 2;
}
